Fixed overflow bug with animations

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
     min-height: 100vh;
     color: white;
     font-family: Geneva, sans-serif;
+    overflow-x: hidden;
 }
 
 ul {
